--- a/src/classes/SingleRequestMock.cls
+++ b/src/classes/SingleRequestMock.cls
@@ -1,27 +1,17 @@
 @isTest
-public class SingleRequestMock implements HttpCalloutMock {
-    protected Integer code;
-    protected String status;
-    protected String bodyAsString;
-    protected Map<String, String> responseHeaders;
-    
-    public SingleRequestMock(Integer code, String status, String bodyAsString, Map<String, String> responseHeaders) {
-        this.code = code;
-        this.status = status;
-        this.bodyAsString = bodyAsString;
-        this.responseHeaders = responseHeaders;
-    }
-    
-    public HTTPResponse respond(HTTPRequest req) {
-        HttpResponse resp = new HttpResponse();
-        resp.setStatusCode(code);
-        resp.setStatus(status);
+global class SingleRequestMock implements HttpCalloutMock {
+    // Implement this interface method
+    global HTTPResponse respond(HTTPRequest req) {
+        // Optionally, only send a mock response for a specific endpoint
+        // and method.
+        System.assertEquals('callout:openweathermap'+'?q=Boston&appid=2de143494c0b295cca9337e1e96b00e0', req.getEndpoint());
+        System.assertEquals('GET', req.getMethod());
         
-        if (responseHeaders != null) {
-            for (String key : responseHeaders.keySet()) {
-                resp.setHeader(key, responseHeaders.get(key));
-            }
-        }
-        return resp;
+        // Create a fake response
+        HttpResponse res = new HttpResponse();
+        res.setHeader('Content-Type', 'application/json');
+        res.setBody('{"foo":"bar"}');
+        res.setStatusCode(200);
+        return res;
     }
 }
